# xironpy

./: .pre-commit-config.yaml  README.md  pyrightconfig.json  ruff.toml  selected  setup.cfg  setup.py
src/xiron_py/: comms.py  data.py  env.py  ws_comms.py
src/xiron_py/controller/: README.md  __init__.py  ilqr.py  mpc.py  mppi.py  pid.py  pure_pursuit.py
src/xiron_py/examples/: __init__.py  catalunya.csv  raceline.csv
src/xiron_py/examples/basics/: collision_checking.py  config.yaml  connection_test.py  we.py
src/xiron_py/examples/ilqr/: path_tracking.py
src/xiron_py/examples/informed_rrt_star/: follow_planned_path.py  planning.py
src/xiron_py/examples/mpc/: mpc_on_manifold.py  path_tracking_ros.py  point_to_go.py
src/xiron_py/examples/mpc_tests/: circular_trajectory.py
src/xiron_py/examples/mppi/: config.yaml  path_tracking.py  path_tracking_ros.py  point_to_go.py
src/xiron_py/examples/mppi_tests/: point_to_go.py
src/xiron_py/examples/multi_robot/: multi_robot_line.py  simple_velocity_publishers.py
src/xiron_py/examples/pid/: follow_path.py
src/xiron_py/examples/rrt/: config.yaml  follow_planned_path.py  planning.py
src/xiron_py/examples/rrt_star/: follow_planned_path.py  planning.py
src/xiron_py/examples/tutorials/: catalunya.ipynb  config.yaml  connection_test.py  controlling_robots.ipynb  pp.ipynb  pp.py  pp.yaml  (+4 more)
src/xiron_py/planner/: __init__.py  informed_rrt_star.py  rrt.py  rrt_star.py  utils.py
src/xiron_py/protos/: any.proto  any_pb2.py  laser_scan_pb2.py  pose_pb2.py  reset_pb2.py  twist_pb2.py
src/xiron_py/test/: test_mppi.py
(+9 files in other folders)
