[metadata]
name = xiron_py
version = 0.0.1
author = Suhrudh Sarathy
author_email = suhrudhsarathy@gmail.com
description = Python interface to the Xiron simulator
long_description = file: README.md
license = MIT
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages = xiron_py
python_requires = >=3.7
install_requires = zmq
package_dir=
    =src

[options.packages.find]
where=src
