[metadata]
name = xiron_py
version = 0.0.2
author = Suhrudh Sarathy
author_email = suhrudhsarathy@gmail.com
description = Python interface to the Xiron simulator
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Programming Language :: Python :: 3
    # Add more classifiers as needed

[options]
packages = find:
python_requires = >=3.9
install_requires =
    zmq
    torch
    shapely
include_package_data = True

[options.packages.find]
exclude =
    tests
    examples
    # Add any other exclusions as needed
